# src/Modules/Credentials/Foundry.Modules.Credentials/Features/CredentialsEndpoints.cs
@@ -1,4 +1,5 @@
 using Foundry.Modules.Credentials.Contracts;
+using Foundry.Modules.Credentials.Features.CreditProbe;
 
 using Microsoft.AspNetCore.Builder;
 using Microsoft.AspNetCore.Http;
@@ -15,6 +16,7 @@ internal static class CredentialsEndpoints
 
         GetCredentials.Endpoint.Map(group);
         UpdateAuthMode.Endpoint.Map(group);
+        CheckCreditsNow.Endpoint.Map(group);
 
         return routes;
     }
